[tool.poetry]
name = "flask-enhanced-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app", from = "." }]

[tool.poetry.dependencies]
python = "^3.12"
gunicorn = "^22.0.0"
psycopg2 = "^2.9.9"
flask = "^3.0.0"
flask-migrate = "^4.0.5"
flask-sqlalchemy = "^3.1.1"
pytest = "^7.4.3"
flask-cors = "^4.0.1"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
flake8 = "*"
mypy = "*"
yamllint = "*"
#mkdocs = "*" #documentation software

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "integration",
]
log_cli = true
log_cli_level = "INFO"

[tool.black]
experimental-string-processing = true
line-length = 88

[tool.isort]
profile = "black"

[tool.bandit]
exclude_dirs = ["tests"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
